--- a/src/style.css
+++ b/src/style.css
@@ -120,6 +120,7 @@ body {
     display: flex;
     justify-content: right;
     align-items: center;
+    text-align: right;
 }
 
 .price-header {
@@ -318,7 +319,7 @@ body {
 .modal-window {
     width: 100%;
     height: 100%;
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
     position: fixed;
