--- a/src/ModalWindowAuthorization/ModalWindowAuthorization.css
+++ b/src/ModalWindowAuthorization/ModalWindowAuthorization.css
@@ -1,4 +1,4 @@
-.modal-window {
+.modal-authorization-window {
     width: 100%;
     height: 100%;
     display: flex;
@@ -10,12 +10,53 @@
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-.modal-content {
-    width: 900px;
-    height: 570px;
+.modal-authorization-content {
+    width: 350px;
+    height: 470px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: gainsboro;
     border-radius: 5px;
+}
+
+.modal-header-block {
+    width: 100%;
+    display: flex;
+    background-color: var(--yellow-color);
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+.modal-header {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-weight: 300;
+    color: white;
+    margin: 0;
+}
+
+.close-icon {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.modal-tabs-block {
+    height: 50px;
+    margin-top: 15px;
+}
+
+.modal-tabs {
+    width: 250px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    overflow: hidden;
 }
