--- a/src/MainHeader/MainHeader.css
+++ b/src/MainHeader/MainHeader.css
@@ -1,10 +1,23 @@
 .header {
     display: flex;
-    justify-content: end;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.button-block {
+    display: flex;
+    align-items: center;
+}
+
+.username {
+    font-family: Noto Sans, sans-serif;
+    margin: 0;
+    margin-right: 10px;
 }
 
 .login_and_register-button {
     cursor: pointer;
+    width: auto;
     height: 30px;
     font-family: Noto Sans, sans-serif;
     background-color: white;
@@ -17,7 +30,7 @@
 }
 
 .headline {
-    height: 30px;
+    width: 100%;
     margin-top: 15px;
     text-align: center;
 }
